feat: 瓦片金字塔渲染引擎重构，替换 RenderLoop/MapRawCache
- 新增 MapRenderer：瓦片金字塔(5级)+Canvas图标层+ImageView玩家，统一transform坐标
- MapContext 移除全图依赖，改用 initialized 标志
- 瓦片加载统一使用 ResourceUtils.getResourceStream，兼容 native image
- tilesDir 由地图名派生标识(/source/map/WorldMap_Show_tiles)
- 瓦片生成优化：一次加载源图，逐级缩放后多线程裁剪保存
- initMapMetadata 优先从 tiles_meta.json 读取尺寸
- checkNewlyGrayed 改用 ResourcePointGridIndex 空间索引
- hover 光环只在图标全量重绘时绘制一次，避免累积
- CameraContext.updateViewport() 接入渲染循环，修复跟随模式
- 删除 RenderLoop/MapRawCache/MultiResMapCache